# dailycodingchallenge

./: CMakeLists.txt  README.md  gen-gif.sh  gen-mp4.sh  geometry.h  main.cc  noncopyable.h  shader_program.cc  shader_program.h  util.cc
cmake/: FindGLFW3.cmake  FindGLM.cmake
common/: CMakeLists.txt  buffer.h  demo.cc  demo.h  framebuffer.cc  framebuffer.h  geometry.h  multi_shadow_buffer.cc  multi_shadow_buffer.h  panic.h  shader_program.cc  shader_program.h  shadow_buffer.cc  shadow_buffer.h  tween.cc  util.h  window.cc  window.h
cube/: CMakeLists.txt  main.cc
cube/shaders/: sphere.frag  sphere.vert
donut/: CMakeLists.txt  main.cc
multi-shadowmaps/: CMakeLists.txt  main.cc
multi-shadowmaps/assets/shaders/: shadow.vert  simple.frag  simple.vert
rubik/: CMakeLists.txt  main.cc
rubik/assets/shaders/: sphere.frag
shaders/: sphere.frag  sphere.vert
shadowmap/: CMakeLists.txt  main.cc
shadowmap/assets/shaders/: phong.frag  phong.vert
slices/: CMakeLists.txt  main.cc
slices-shadows/: CMakeLists.txt  main.cc
slices-shadows/shaders/: phong.frag  phong.vert
slices/shaders/: sphere.frag  sphere.vert
spiral/: CMakeLists.txt  main.cc
spiral/shaders/: sphere.frag  sphere.vert
strips/: CMakeLists.txt  main.cc
strips/shaders/: shadow.frag  shadow.vert  sphere.frag  sphere.vert
tiling/: CMakeLists.txt  main.cc
tiling/shaders/: shadow.frag  shadow.geom  shadow.vert  tile.frag  tile.geom
twistycube/: CMakeLists.txt  blur_effect.cc  main.cc
twistycube/shaders/: blur.frag  blur.vert  simple.frag
xcube/: CMakeLists.txt  main.cc  tween.cc  tween.h
xcube/shaders/: sphere.frag  sphere.vert
xdonut/: CMakeLists.txt  main.cc
xdonut/shaders/: donut.frag  donut.vert
xspiral/: CMakeLists.txt  main.cc
xspiral/shaders/: sphere.frag
xtiling/: CMakeLists.txt  main.cc
xtiling/shaders/: shadow.geom  tile.frag  tile.geom
xxdonut/: CMakeLists.txt  blur_effect.h  framebuffer.cc  framebuffer.h  main.cc
xxdonut/shaders/: donut.frag  plane.frag  plane.vert  shadow.frag  shadow.vert
